# PythonForDataAnanlysis

./: .gitignore  00_PythonTipsAndTricks.ipynb  02_PandasIntroduction.ipynb  03_DataCleaningAndPreparation.ipynb  06_IntroduzioneAltair.ipynb  07_ Altair_TypesMarksChannels.ipynb  08_Altair_TrasformazioniSuiDati.ipynb  0_PythonTipsAndTricks.ipynb  10_Altair_MultiViewComposition.ipynb  11_Altair_InteractionsWalkthrough.ipynb  1_NumpyIntroduction_VectorizedComputations.ipynb  2_PandasIntroduction.ipynb  3_DataCleaningAndPreparation.ipynb  4_DataWrangling.ipynb  5_PlottingAndVisualization.ipynb  6_IntroduzioneAltair.ipynb  7_ Altair_TypesMarksChannels.ipynb  8_Altair_TrasformazioniSuiDati.ipynb  9_Altair_AxesScalesLegends.ipynb  P01_Preprocessing_GameZoneOrders.ipynb  P02_InClassApp.py  P02_TellingaStoryWithData.ipynb  P02_WebApp.py  PythonTipsAndTricks.ipynb  README.md  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: NumpyIntroduction_VectorizedComputations-checkpoint.ipynb
examples/: gamezone-orders-data.xlsx
exercises/pandas/1_Occupation/: Exercise_with_Solution.ipynb  Exercises.ipynb
images/: dashboard.avif  stock_market.avif
