[project]
name = "pythonfordataananlysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html5lib>=1.1",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "jupyter-packaging>=0.12.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "nodejs>=0.1.1",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
    "statsmodels>=0.14.5",
]
