[project]
name = "pythonfordataananlysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "beautifulsoup4>=4.14.2",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "patsy>=1.0.2",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
    "statsmodels>=0.14.5",
    "vega-datasets>=0.9.0",
]
